# genimage

./: Cargo.toml  README.md  build.rs
src/: array.rs  assert_exact_size.rs  color.rs  format.rs  lib.rs  u32_buf.rs
src/general/: bits.rs  builder.rs  mod.rs  solid.rs
src/pixel/: convert_format.rs  mod.rs
